fix: Add leaderboard spacing on small devices.

--- a/apps/website/src/components/leaderboard/Leaderboard/Leaderboard.module.scss
+++ b/apps/website/src/components/leaderboard/Leaderboard/Leaderboard.module.scss
@@ -57,6 +57,10 @@
   width: 40px;
 }
 
+.user {
+  padding: 4px 0;
+}
+
 .user, .amount {
   font-size: 14px;
   font-weight: 700;
